--- a/style.css
+++ b/style.css
@@ -116,11 +116,11 @@ body{
 }
 
 .app-download:nth-child(1) {
-    background-image: url('./img/apple-button.png');
+    background-image: url('./apple-button.png');
 }
 
 .app-download:nth-child(2) {
-    background-image: url('./img/googleplay-button.png');
+    background-image: url('./googleplay-button.png');
 }
 @media (max-width: 1024px) {
     .instagram-wrapper {
